# sentiment-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  DECISIONS.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  gunicorn.conf.py  prometheus.rules.yml  prometheus.yml  pyproject.toml  requirements.txt  system-design.md
.github/workflows/: ci.yml
app/: auth.py  config.py  dependencies.py  limiter.py  main.py  metrics.py  middleware.py
app/models/: __init__.py  schemas.py
app/routes/: __init__.py  sentiment.py
app/services/: __init__.py  sentiment_service.py
app/utils/: __init__.py  text.py
grafana/dashboards/: sentiment-api.json
grafana/provisioning/dashboards/: dashboard.yml
tests/: conftest.py  test_app_metadata.py  test_auth.py  test_batch_validation.py  test_config.py  test_content_type.py  test_cors.py  test_dependencies.py  test_error_handler.py  test_gunicorn.py  test_health.py  test_info_endpoint.py  test_lifespan.py  test_method_validation.py  test_metrics.py  test_openapi.py  test_rate_limit.py  test_request_id.py  test_security_headers.py  test_sentiment.py  test_service.py  test_strict_schemas.py  test_text.py  test_validation_errors.py  test_versioned_health.py
