[project]
name = "sentiment-api"
version = "0.1.0"
description = "REST API for text sentiment analysis using HuggingFace Transformers"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "gunicorn==22.0.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "transformers==4.40.2",
    "torch==2.3.0",
    "sentencepiece==0.2.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "python-json-logger>=2.0,<3",
    "prometheus-fastapi-instrumentator>=0.9",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --tb=short"
filterwarnings = [
    "ignore::PendingDeprecationWarning:starlette.formparsers",
    "ignore::FutureWarning:huggingface_hub.file_download",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "T20", "C4", "PIE", "RUF", "A", "S", "PT"]
ignore = ["B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
